# place-research

./: .env.example  .gitignore  .pre-commit-config.yaml  CICD_README.md  Makefile  QUICKSTART.md  README.md  REFLEX_IMPLEMENTATION.md  SINGLE_SERVER_MIGRATION.md  find_stops_along_route.ipynb  package-lock.json  pyproject.toml  search_nearby.ipynb  test_async_performance.py
app/: __init__.py  forms.py  models.py  routes.py
apps/backend/: .env.example  Makefile  README.md  dev.sh  pyproject.toml  pytest.ini  run.sh
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 14ae4b09422c_add_preferred_places_to_user_preferences.py  d0fa9acc58f5_initial_schema.py  f277f7865e47_change_lot_size_from_integer_to_float.py  f8023a8c6b8e_initial_schema.py
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/endpoints/: auth.py  locations.py  properties.py  saved_properties.py  user_preferences.py
apps/backend/app/core/: config.py  logging_config.py  security.py
apps/backend/app/db/: database.py  migrations.py
apps/backend/app/exceptions/: __init__.py  auth.py  base.py  enrichment.py  external_api.py  handlers.py  property.py
apps/backend/app/integrations/: air_quality_api.py  base_client.py  email.py  flood_zone_api.py  google_maps_api.py  google_places_api.py  highway_api.py  mock_property_data_api.py  osrm_api.py  property_data_api.py  property_data_factory.py  walk_score_api.py
apps/backend/app/middleware/: logging.py  metrics.py
apps/backend/app/models/: __init__.py  api_usage.py  cache_entry.py  custom_location.py  property.py  property_enrichment.py  saved_property.py  user.py  user_preference.py
apps/backend/app/schemas/: auth.py  custom_location.py  property.py  saved_property.py  user.py  user_preference.py
apps/backend/app/services/: cache_service.py  custom_location_service.py  distance_service.py  email_service.py  geocoding_service.py  property_service.py  saved_property_service.py  user_preference_service.py  user_service.py
apps/backend/app/services/enrichment/: base_provider.py  orchestrator.py  provider_registry.py
apps/backend/app/services/enrichment/providers/: air_quality.py  annual_average_climate.py  driving_distance.py  flood_zone.py  highways.py  places_nearby.py  railroads.py  walkbike_score.py
apps/backend/app/utils/: address_parser.py  api_key_manager.py  cache_decorator.py  distance_calculator.py  geocoding_utils.py  validation.py
apps/backend/scripts/: init_db.py
apps/backend/tests/: conftest.py
apps/backend/tests/e2e/: test_property_search_flow.py
apps/backend/tests/factories/: user_factory.py
apps/backend/tests/integration/test_api/: test_auth_endpoints.py  test_locations_endpoints.py  test_properties_endpoint.py  test_saved_properties_endpoint.py  test_user_preferences_endpoint.py
apps/backend/tests/performance/: test_api_performance.py
apps/backend/tests/unit/test_core/: test_security.py
apps/backend/tests/unit/test_enrichment/: test_base_provider.py  test_orchestrator.py  test_provider_registry.py
apps/backend/tests/unit/test_integrations/: conftest.py  test_air_quality_api.py  test_base_client.py  test_email.py  test_flood_zone_api.py  test_google_maps_api.py  test_google_places_api.py  test_highway_api.py  test_osrm_api.py  test_property_data_api.py  test_walk_score_api.py
apps/backend/tests/unit/test_middleware/: test_logging.py  test_metrics.py
apps/backend/tests/unit/test_providers/: test_air_quality.py  test_annual_average_climate.py  test_driving_distance.py  test_flood_zone.py  test_highways.py  test_places_nearby.py  test_railroads.py  test_walkbike_score.py
apps/backend/tests/unit/test_services/: test_cache_service.py  test_custom_location_service.py  test_distance_service.py  test_email_service.py  test_geocoding_service.py  test_property_service.py  test_saved_property_service.py  test_user_preference_service.py  test_user_service.py
docker/: .dockerignore  .env.example  README.md  backend.Dockerfile  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  frontend.Dockerfile  nginx.conf
docs/: 1PASSWORD_MIGRATION.md  API_README.md  AUTHENTICATION.md  AUTHENTICATION_AUTHORIZATION.md  AUTHENTICATION_MIGRATION.md  CACHING.md  CICD.md  CICD_QUICKSTART.md  ERROR_HANDLING.md  (+11 more)
(+166 files in other folders)
